# swagger_server/swagger/swagger.yaml
@@ -95,6 +95,32 @@ paths:
         "404":
           description: Student not found
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/average_grade:
+    get:
+      summary: Get average grade of a student
+      description: Returns the average grade of all the student's grade records
+      operationId: get_average_grade
+      parameters:
+      - name: student_id
+        in: path
+        description: ID of student
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+        "404":
+          description: Student not found or student has no grades
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     Student:
